--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<head>
+    <title>78987656</title>
+</head>
+<body>
+    <script>
+        window.alert("78987656");
+    </script>
+    <center>
+        <h1>78987656</h1>
+    </center>
+</body>
