--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
 </head>
 <body>
     <script>
-        window.alert("78987656");
+        const pw = "nuggets";
+        const pwa = window.prompt("78987656");
+
+        if (pwa === pwa) {
+            window.open("78987656", "_blank");
+        }
+
+        if (newWindow) {
+        const iframeHTML = `
+        <!DOCTYPE html>
+        <html>
+        <head><title>Secure Page</title></head>
+        <body style="margin:0;">
+            <iframe src="f.html" style="width:100vw; height:100vh; border:none;"></iframe>
+        </body>
+        </html>
+        `;
+
+                newWindow.document.write(iframeHTML);
+                newWindow.document.close();
+            } else {
+                alert("Popup blocked. Please allow popups for this site.");
+            }
     </script>
     <center>
         <h1>78987656</h1>
