--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         const pwa = window.prompt("78987656");
 
         if (pwa === pwa) {
-            window.open("78987656", "_blank");
+            window.open("_blank");
         }
 
         if (newWindow) {
