--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
     <script>
         const pw = "nuggets";
-        const pwa = window.prompt("Enter the password:");
+        const pwa = window.prompt("78987656");
 
         if (pwa === pw) {
-            const newWindow = window.open("about:blank", "_blank");
+            const newWindow = window.open("howdy", "_blank");
 
             if (newWindow) {
                 const iframeSrc = "https://78987656.github.io/78987656/f.html";
@@ -44,7 +44,7 @@
                 alert("Popup blocked. Please allow popups for this site.");
             }
         } else {
-            alert("Incorrect password.");
+            alert("78987656");
         }
     </script>
 
